--- a/app/views/snippets/contact-form.liquid.haml
+++ b/app/views/snippets/contact-form.liquid.haml
@@ -12,4 +12,4 @@
       %textarea.form-control#extra{ rows: 5, placeholder: 'Anything else we should know...' }
   .row
     .form-group.col-xs-6
-      %button.form-control.btn.btn-default{ type: :submit }Send
+      %button.btn.btn-default{ type: :submit }Send
