--- a/app/views/snippets/head.liquid.haml
+++ b/app/views/snippets/head.liquid.haml
@@ -1,4 +1,5 @@
 %head
   %link{ rel: "stylesheet", href: "//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", integrity: "sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==", crossorigin: "anonymous" }
+  %link{ rel: "stylesheet", href: "//fonts.googleapis.com/css?family=Lato:400,700"}
+  %link{ rel: "stylesheet", href: "//fonts.googleapis.com/css?family=Muli:400,300"}
   {{ 'application.css' | stylesheet_tag }}
-  {{ 'form.css' | stylesheet_tag }}
