--- a/app/views/snippets/navbar.liquid.haml
+++ b/app/views/snippets/navbar.liquid.haml
@@ -7,16 +7,16 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      / %a.navbar-brand{:href => "#"} Brand
-    / Collect the nav links, forms, and other content for toggling
+      %a.navbar-brand.visible-xs{ :href => "#top" }
+        %img.img-responsive{ src: "{{ 'icons/reach-hearts-icon.svg' | theme_image_url }}" }
     #navbar-collapse.collapse.navbar-collapse
       .navbar-inner
-        %ul.nav.navbar-nav{style: 'text-align: center;'}
-          %li
+        %ul.nav.navbar-nav
+          %li.hidden-xs
             %a.scrollspyable#nav-logo{ :href => "#top" }
               %img.img-responsive{ src: "{{ 'icons/reach-hearts-icon.svg' | theme_image_url }}" }
           %li
-            %a.scrollspyable{ :href => "#top" } Home
+            %a.scrollspyable.active{ :href => "#top" } Home
           %li
             %a.scrollspyable{ :href => "#about-us" } About Us
           %li
