--- a/public/stylesheets/form.scss
+++ b/public/stylesheets/form.scss
@@ -1,18 +1,15 @@
-$dark-gray: #312d2e;
-form {
-  margin-top: 30px; //Match H2's margin + line height difference
-  input.form-control {
-    height: 60px;
-    font-size: 20px;
-  }
-  textarea.form-control {
-    font-size: 20px;
-  }
-  button.form-control {
-    margin-top: 20px;
-    height: 60px;
-    background-color: $dark-gray;
-    color: white;
-    font-size: 20px;
+.form-control {
+  font-size: 15px;
+  border-radius: 0px;
+  border: 1px solid #a7a9ab;
+}
+
+.btn-default {
+  background-color: $dark-gray;
+  color: white;
+  font-size: 20px;
+  padding: 10px 20px;
+  &:hover, &:focus, &:active {
+    background-color: $accent-background-color;
   }
 }
