--- a/app/views/snippets/contact-form.liquid.haml
+++ b/app/views/snippets/contact-form.liquid.haml
@@ -3,13 +3,13 @@
     .form-group.col-xs-12
       %input.form-control#business_name{ type: :text, placeholder: 'Business Name' }
   .row
-    .form-group.col-xs-6
+    .form-group.col-xs-12
       %input.form-control#first_name{ type: :text, placeholder: 'Contact First Name' }
-    .form-group.col-xs-6
+    .form-group.col-xs-12
       %input.form-control#last_name{ type: :text, placeholder: 'Contact Last Name' }
   .row
     .form-group.col-xs-12
       %textarea.form-control#extra{ rows: 5, placeholder: 'Anything else we should know...' }
   .row
-    .form-group.col-xs-6
-      %button.btn.btn-default{ type: :submit }Send
+    .form-group.col-xs-12
+      %button.btn.btn-default.contact-form-submit{ type: :submit }Send
