--- a/app/views/snippets/navbar.liquid.haml
+++ b/app/views/snippets/navbar.liquid.haml
@@ -1,5 +1,5 @@
 %nav.navbar.navbar-fixed-top.navbar-center
-  .container-fluid
+  .container
     / Brand and toggle get grouped for better mobile display
     .navbar-header
       %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#navbar-collapse", "data-toggle" => "collapse", :type => "button"}
