--- a/public/stylesheets/_variables.scss
+++ b/public/stylesheets/_variables.scss
@@ -3,4 +3,4 @@ $accent-background-color: #f3f3f4;
 $dark-gray: #262626;
 $red: #e44739;
 $blue: #00a9ba;
-$navbar-height: 110px;
+$navbar-md-height: 110px;
