--- a/app/views/snippets/head.liquid.haml
+++ b/app/views/snippets/head.liquid.haml
@@ -1,5 +1,6 @@
 %head
   %link{ rel: "stylesheet", href: "//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", integrity: "sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==", crossorigin: "anonymous" }
   %link{ rel: "stylesheet", href: "//fonts.googleapis.com/css?family=Lato:400,700"}
-  %link{ rel: "stylesheet", href: "//fonts.googleapis.com/css?family=Muli:400,300"}
+  %link{ rel: "stylesheet", href: "//fonts.googleapis.com/css?family=Muli:700,400,300"}
+  %meta{ name: "viewport", content: "width=device-width, initial-scale=1"}
   {{ 'application.css' | stylesheet_tag }}
